# course_paper_Django

./: pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_delete_post.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailservice/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailservice/management/commands/: send_mailing.py
mailservice/migrations/: 0001_initial.py  0002_alter_logs_options_remove_logs_client_logs_user_and_more.py  0002_alter_mailingsettings_date_and_time.py  0002_remove_logs_client_alter_client_comments_and_more.py  0003_mailingsettings_create_date.py  0003_remove_message_mailing_settings_client_owner_and_more.py  0004_alter_mailingsettings_options.py  0005_mailingsettings_sent_time.py  0006_remove_mailingsettings_date_and_time.py
mailservice/templates/mailservice/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  logs_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailservice/templates/mailservice/includes/: inc_main_menu.html
users/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_customuser_first_name_and_more.py  0003_alter_customuser_telephone.py
users/templates/users/: confirm_email.html  login.html  user_form.html
