[tool.poetry]
name = "course-paper-django"
version = "0.1.0"
description = ""
authors = ["denishudyakov <denis.hudyakov27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
django-crontab = "^0.7.1"
psycopg2-binary = "^2.9.9"
django-apscheduler = "^0.6.2"
python-dotenv = "^1.0.1"
django = "^5.0.4"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2024.1"
pillow = "^10.3.0"
ipython = "^8.24.0"
python-slugify = "^8.0.4"
redis = "^5.0.4"


[tool.poetry.group.lint.dependencies]
mypy = "^1.9.0"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
